--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
         environment:
             - DOCKER_TLS_CERTDIR=/certs
         volumes:
-            - jenkins-docker-certs:/certs/client
-            - jenkins-data:/var/jenkins_home
+            - ./jenkins-docker-certs:/certs/client
+            - ./jenkins-data:/var/jenkins_home
         ports:
             - 2376:2376
         image: docker:dind
@@ -33,8 +33,8 @@ services:
             - 8080:8080
             - 50000:50000
         volumes:
-            - jenkins-data:/var/jenkins_home
-            - jenkins-docker-certs:/certs/client:ro
+            - ./jenkins-data:/var/jenkins_home
+            - ./jenkins-docker-certs:/certs/client:ro
         build: ./myjenkins-blueocean/
 networks:
   jenkins:
