--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.3"
 services:
   web:
+    privileged: true
     image: web-serv-test1:latest
     ports:
       - 5000:5000
@@ -20,6 +21,7 @@ services:
             - 2376:2376
         image: docker:dind
   myjenkins-blueocean:
+        privileged: true
         container_name: jenkins-blueocean
         environment:
             - DOCKER_HOST=tcp://docker:2376
