--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   web:
     privileged: true
     image: web-serv-test1:latest
+    volumes:
+       - ./web-code:/code
     ports:
       - 5000:5000
     environment:
